--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <!-- Bottom -->
         <section class="bottom-wrapper">
         <div class="left">
-            <img src="img/cart.png" alt="cart phone">
+            <img src="img/Cart.png" alt="cart phone">
             <img src="img/orders.png" alt="orders phone">
         </div>
         <div class="right">
             <div class="first-right">
             <img src="img/profile.png" alt="profile phone">
-            <img src="img/product.png" alt="product phone">
+            <img src="img/Product.png" alt="product phone">
         </div>
           </div>
         <img src="img/home.png" alt="home phone">
